# dust-lang

./: CMakeLists.txt  README.md  main.cpp
docs/: dust_asm.asm  dust_ir.ll  grammar.txt  input.dust
source/compiler/: llvm_compiler.cpp  llvm_compiler.hpp
source/lexer/: lexer.cpp  lexer.hpp
source/llvm/: llvm_compiler.cpp  llvm_compiler.hpp  llvm_executable_builder.cpp  llvm_executable_builder.hpp
source/token/: token.cpp  token.hpp  token_type.hpp
source/token/token_buffer/: token_buffer.cpp  token_buffer.hpp
test/: tests.cpp
